<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.frevocomunicacao.tracker.activities.FormActivity"
    tools:showIn="@layout/activity_form">

    <com.frevocomunicacao.tracker.widget.MultiSelectSpinner
        android:id="@+id/situations_spinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp" />

    <EditText
        android:id="@+id/edt_address_cep"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/situations_spinner"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/edt_address_number"
        android:hint="@string/edt_address_cep"
        android:textSize="15sp"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />


    <EditText
        android:id="@+id/edt_address"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_address_cep"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/edt_address_number"
        android:textSize="15sp"
        android:hint="@string/edt_address"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />


    <EditText
        android:id="@+id/edt_address_number"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_address_cep"
        android:layout_alignParentRight="true"
        android:textSize="15sp"
        android:hint="@string/edt_address_number"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_address_complement"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_address"
        android:textSize="15sp"
        android:hint="@string/edt_address_complement"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_address_neighborhood"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_address_complement"
        android:textSize="15sp"
        android:hint="@string/edt_address_neighborhood"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_address_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_address_neighborhood"
        android:layout_alignParentLeft="true"
        android:layout_toLeftOf="@+id/edt_address_number"
        android:textSize="15sp"
        android:hint="@string/edt_address_city"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_address_state"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_address_neighborhood"
        android:layout_alignParentRight="true"
        android:textSize="15sp"
        android:hint="@string/edt_address_state"
        android:inputType="textCapSentences"
        android:maxLines="1"
        android:maxLength="2"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_address_reference_point"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_address_city"
        android:textSize="15sp"
        android:hint="@string/edt_address_reference_point"
        android:inputType="text"
        android:maxLines="1"
        android:singleLine="true" />

    <EditText
        android:id="@+id/edt_observation"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/edt_address_reference_point"
        android:inputType="textMultiLine"
        android:textSize="15sp"
        android:lines="4"
        android:maxLines="4"
        android:hint="Observações"/>

    <TextView
        android:id="@+id/tvImgLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edt_observation"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:textSize="15sp"
        android:textAllCaps="true"
        android:textStyle="bold"
        android:text="Imagens"/>

    <GridView
        android:id="@+id/galley_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tvImgLabel"
        android:columnWidth="74dp"
        android:numColumns="auto_fit"
        android:verticalSpacing="5dp"
        android:horizontalSpacing="5dp"
        android:stretchMode="columnWidth"
        android:gravity="center" />

</RelativeLayout>
